--- a/css/style.css
+++ b/css/style.css
@@ -241,3 +241,43 @@ span {
 {
   padding: 30px 5% 30px 5%;
 }
+
+#lname
+{
+  display: inline-block;
+}
+input
+{
+  display: block;
+
+}
+#resume_form
+{
+ width: 60%;
+ padding: 5%;
+ margin: 5% 20%;
+ background-color: #ffffff;
+}
+#resume_form_body
+{
+ background-image: url("../images/tools-bg.jpg");
+  
+}
+ 
+
+fieldset span {
+  float: right;
+}
+.hide{
+  border: solid 1px #000;
+  padding: 0 30px;
+  margin: 10px 2px;
+}
+.hideMe-6
+{
+  float: left;
+}
+#upload
+{
+  border-radius: 50px;
+}
